--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ exclude =
 
 [tool:pytest]
 python_files = tests*.py
-DJANGO_SETTINGS_MODULE = config.settings
+DJANGO_SETTINGS_MODULE = mysite.settings
 addopts =
     --nomigrations
     --pdbcls=ipdb:__main__.debugger_cls
